--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.14.7"
+    "nodemon": "^1.19.4"
   },
   "dependencies": {
-    "express": "^4.16.2",
-    "morgan": "^1.10.0"
+    "express": "^4.17.3",
+    "morgan": "^1.10.0",
+    "volleyball": "^1.5.1"
   }
 }
