--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "morgan": "^1.10.0",
+    "node-time-ago": "^1.0.0",
     "volleyball": "^1.5.1"
   }
 }
